--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.13.3",
-    "http-server": "^0.8.4"
+    "http-server": "^0.8.4",
+    "mongoose": "^4.1.9"
   },
   "devDependencies": {},
   "scripts": {
