--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "compass compile public/compass && node server.js",
+    "start": "node server.js",
     "startdev": "compass watch public/compass & nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
