--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "http-server": "^0.8.4",
     "mongoose": "^4.1.9"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "startdev": "compass watch public/compass & nodemon server.js",
